// Code generated by sqlc. DO NOT EDIT.
// versions:
//   sqlc v1.31.1

package db

import (
	"time"
)

// 存储抓取的电费流水数据
type ElectricityRecord struct {
	ID         int64     `json:"id"`
	RoomID     int64     `json:"room_id"`
	Balance    int64     `json:"balance"`
	RecordedAt time.Time `json:"recorded_at"`
}

// 存储需要监控的寝室配置信息
type Room struct {
	ID           int64     `json:"id"`
	Name         string    `json:"name"`
	AreaID       string    `json:"area_id"`
	BuildingCode string    `json:"building_code"`
	FloorCode    string    `json:"floor_code"`
	RoomCode     string    `json:"room_code"`
	CreatedAt    time.Time `json:"created_at"`
}

type User struct {
	Username       string    `json:"username"`
	HashedPassword string    `json:"hashed_password"`
	FullName       string    `json:"full_name"`
	Email          string    `json:"email"`
	CreatedAt      time.Time `json:"created_at"`
	Role           string    `json:"role"`
}

type UserRoom struct {
	Username string `json:"username"`
	RoomID   int64  `json:"room_id"`
	// 预警阈值，单位: 元
	Threshold int32 `json:"threshold"`
	IsEnabled bool  `json:"is_enabled"`
	// 上次发送邮件的时间
	LastNotifiedAt time.Time `json:"last_notified_at"`
}
