Project eleclog {
  database_type: 'PostgreSQL'
  Note: '''
    # Electricity Log Database
  '''
}

Table rooms as R {
  id bigserial [pk, increment] // 主键 ID
  name varchar [not null] // 寝室名称，例如 "302室"
  area_id varchar [not null] // API 参数：区域 ID
  building_code varchar [not null] // API 参数：楼栋代码
  floor_code varchar [not null] // API 参数：楼层代码
  room_code varchar [not null] // API 参数：房间代码
  created_at timestamptz [not null, default: `now()`]

  Note: '存储需要监控的寝室配置信息'

  indexes {
    (area_id, building_code, floor_code, room_code) [unique] // 联合唯一索引：防止重复添加同一房间
  }
}

Table electricity_records {
  id bigserial [pk, increment]
  room_id bigint [not null] // 外键，关联 rooms 表
  balance bigint [not null] // 当前剩余金额,单位分
  recorded_at timestamptz [not null, default: `now()`]

  Note: '存储抓取的电费流水数据'
  
  indexes {
    (room_id, recorded_at) [unique] // 联合唯一索引：防止同一时刻重复记录
    recorded_at // 时间索引：优化按天、周、月查询的性能
  }
}

Table users as U {
  username varchar [pk, not null]
  hashed_password varchar [not null]
  full_name varchar [not null]
  email varchar [unique, not null]
  role varchar  [default:`user`,not null]
  created_at timestamptz [not null, default: `now()`]
}

Table user_rooms as UR {
  username varchar [not null]
  room_id bigint [not null]
  threshold int [not null, default: 10, note: '预警阈值，单位: 元']
  is_enabled boolean [not null, default: false]
  last_notified_at timestamptz [not null, default: '0001-01-01', note: '上次发送邮件的时间']
  
  Indexes {
    (username, room_id) [pk] // 复合主键，防止重复订阅
  }
}

Ref: electricity_records.room_id > rooms.id [delete: cascade]
Ref: user_rooms.username > users.username [delete: cascade]
Ref: user_rooms.room_id > rooms.id [delete: cascade]